2008-03-01  David Wetzel <dave@turbocat.de>
        * GSWAdaptors/Apache2/mod_gsw.c
        read POST data before contacting the app

2008-02-18  David Wetzel <dave@turbocat.de>
        * GSWAdaptors/Apache2/mod_gsw.c
        pass more to the application

2008-02-13  David Ayers  <ayers@fsfe.org>

	* GSWeb.framework/GSWUtils.m (boolValueFor,boolValueWithDefaultFor): Rely
	on [NSString-boolValue] as it handle NO and digits more correctly.
	
2007-11-30  David Wetzel <dave@turbocat.de>
	
        GSWeb.framework:
        * GSWBindingNameAssociation.m
        * GSWAssociation.m
        add _setValueNoValidation:inComponent:
        * GSWKeyValueAssociation
        added _isValueSettable
        added _setValueNoValidation: inComponent:
        * GSWRepetition.m
        use private _setValueNoValidation: inComponent: to speed things up

2007-11-25  David Wetzel <dave@turbocat.de>
	
	* GSWAdaptors/Apache2/mod_gsw.c
	Works also if a header or empty line at the end of the headers has a \r\n ending.
	GSWeb.framework:
	* rewrote large parts of GSWDefaultAdaptor 
	* new GSWHTTPIO and GSWWorkerThread
	* dropped GSWDefaultAdaptorThread
	* some takeValue:forKey: fixes
	* started to remove global inclues

2007-11-24  David Ayers  <ayers@fsfe.org>

	* GSWeb.framework/GSWApplication+Defaults.m
	(TAKEVALUEFORKEY): Rely on setValue:forKey: to handle
	nil values.

	* GSWExtensions.framework/GSWKeyValueConditional.h
	* GSWExtensions.framework/GSWKeyValueConditional.api
	Convert from DOS to UNIX line feeds.
	
2007-06-22  David Wetzel <dave@turbocat.de>
	
	* GSWAdaptors/Apache2/mod_gsw.c
	* GSWSWeb.framework/GSWComponentRequestHandler.m
	* GSWeb.framework/GSWDefaultAdaptorThread.m

	Added support for POST requests from browsers without
	content-length header.
	(firefox does this without proxy)

2007-05-15  David Wetzel <dave@turbocat.de>
	
	* GSWAdaptors/Apache2
	made Application name clickable on status page

2007-05-10  David Wetzel <dave@turbocat.de> 
	