@@ -1,3 +1,7 @@
+2008-03-02  David Wetzel <dave@turbocat.de>
+        GSWeb.framework/GSWHTTPIO.m
+        * optimized readDataLine
+
 2008-03-01  David Wetzel <dave@turbocat.de>
         * GSWAdaptors/Apache2/mod_gsw.c
         read POST data before contacting the app
